# BeatNEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: data.json
engine/: CMakeLists.txt
engine/include/: XibaData.hpp  XibaEngine.hpp
engine/src/: XibaData.cpp  XibaEngine.cpp
include/: XibaOfDevs.hpp
src/: XibaOfDevs.cpp
